<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:paddingVertical="32dp"
    android:background="@color/bg_app"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:id="@+id/Hombre"
        app:cardBackgroundColor="@color/bg_comp"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toStartOf="@id/Mujer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_male"
            app:tint="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hombre"
            android:textAllCaps="true"
            android:textColor="@color/title_text"
            android:layout_marginTop="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Mujer"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/bg_comp"
        app:cardCornerRadius="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Hombre"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_female"
                app:tint="@color/white"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mujer"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                android:layout_marginTop="10dp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bg_comp"
        android:id="@+id/altura"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/Hombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Altura"
                android:textAllCaps="true"
                android:textColor="@color/title_text"/>
            <com.google.android.material.slider.RangeSlider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rsHeight"
                android:contentDescription="height"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvHeight"
                android:text="120cm"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/edad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/bg_comp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/altura"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Edad"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/selectoraltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/quitarpeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_remove"
                    app:backgroundTint="@color/bg_fab"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ayadirpeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/bg_fab"
                    app:tint="@color/white"
                    />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/peso"
        android:layout_width="0dp"
        android:layout_height="150dp"

        app:cardBackgroundColor="@color/bg_comp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edad"
        app:layout_constraintTop_toTopOf="@+id/altura">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Peso"
                android:textAllCaps="true"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/selectoredad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/restaredad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_remove"
                    app:backgroundTint="@color/bg_fab"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/ayadiredad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/bg_fab"
                    app:tint="@color/white" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calcular"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/bg_fab"
        android:text="@string/Calcular"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
      />


</androidx.constraintlayout.widget.ConstraintLayout>